<resources>
    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">GPOVallas</string>
    <string name="username">Usuario:</string>
    <string name="textoEntrada">Bienvenido a la TPV del grupo GKM, favor introducir tus datos de
        entrada como vendedor.
        \nCaso en caso de dificultades favor llamar al número 93-333-XXXX.
    </string>
    <string name="password">Contraseña:</string>
    <string name="iniciando_sesion">Iniciando sesión, por favor, espere...</string>
    <string name="cerrar">Cerrar</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="loading">Operación en proceso. Por favor espere ...</string>
    <string name="frecuencia_prompt">Escoja la frecuencia</string>
    <string name="zona_prompt">Zona</string>
    <string name="subzona_prompt">Subzona</string>
    <string name="forma_pago_prompt">Seleccione una forma de pago</string>
    <string name="condicion_pago_prompt">Seleccione una condición de pago</string>
    <string name="crash_toast_text">Ha ocurrido un error desconocido por Tpv GKM, por favor, envíe
        el feedback al centro de soporte
    </string>
    <string name="captacion_fase_prompt">Seleccione una fase</string>
    <string name="captacion_posibilidad_prompt">Seleccione una posibilidad</string>
    <string name="captacion_resultado_prompt">Seleccione un resultado</string>
    <string name="linea_mercado_prompt">Seleccione una línea de mercado</string>
    <string name="ubicacion_prompt">Seleccione una ubicación</string>
    <string name="layout_prompt">Seleccione un layout</string>
    <string name="tipo_nevera_prompt">Seleccione un tipo de nevera</string>
    <string name="elem_trade_prompt">Seleccione un elemento de trade</string>
    <string name="tipo_pedido_prompt">Seleccione un tipo de pedido</string>
    <string name="stock_prompt">Stock</string>
    <string name="rapelfinal">Vol.fac.final</string>
    <string name="grupo_prompt">Seleccione un grupo</string>
    <string name="familia_prompt">Seleccione una familia</string>
    <string name="serie_prompt">Seleccione una serie</string>
    <string name="probabilidad_prompt">Seleccione probabilidad</string>
    <string name="pais_prompt">Seleccione un país</string>
    <string name="provincia_prompt">Seleccione una provincia</string>
    <string name="poblacion_prompt">Seleccione una población</string>
    <string name="almacen_prompt">Seleccione un almacén</string>
    <string name="grupo">Grupo</string>
    <string name="familia">Familia</string>
    <string name="subfamilia">Subfamilia</string>
    <string name="marca">Marca</string>
    <string name="proovedor">Proovedor</string>
    <string name="articulo">Artículo</string>
    <string name="clasificacion_popup">Descripción: %1$s \nTotal(%%):\t\t %2$s \nTotal(€):\t\t
        %3$s
    </string>
    <string name="campo_requerido">Requerido</string>
    <string name="error_generico">Error interno, intentar otra vez.</string>
    <string name="tab_datos_generales">Datos Generales</string>
    <string name="tab_contactos">Contactos</string>
    <string name="tab_acciones">Acciones</string>
    <string name="tab_propuestas">Propuestas</string>
    <string name="tab_facturas">Facturas</string>
    <string name="lbl_cliente_codigo">Código:</string>
    <string name="lbl_cliente_rfc">RFC:</string>
    <string name="lbl_clientes_razonSocial">Razón Social:</string>
    <string name="lbl_clientes_nomComercial">Empresa:</string>
    <string name="lbl_clientes_porcentComision">Comisión:</string>
    <string name="lbl_clientes_diasCredito">Días de Crédito:</string>
    <string name="lbl_clientes_creditoMax">Crédito Máximo:</string>
    <string name="lbl_clientes_ejecutivo">Ejecutivo:</string>
    <string name="lbl_clientes_direccion">Dirección:</string>
    <string name="lbl_clientes_no_exterior">No. Exterior:</string>
    <string name="lbl_clientes_colonia">Colonia:</string>
    <string name="lbl_clientes_cp">C.P.:</string>
    <string name="lbl_clientes_ciudad">Ciudad:</string>
    <string name="lbl_clientes_no_interior">No. Interior:</string>
    <string name="lbl_clientes_delegacion">Delegación:</string>
    <string name="lbl_clientes_pais">País:</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_datos_basicos">Datos Básicos</string>
    <string name="contacto_nombre">Nombre:</string>
    <string name="contacto_apellidos">Apellidos:</string>
    <string name="contacto_titulo">Titulo:</string>
    <string name="contacto_cargo">Cargo:</string>
    <string name="contacto_telefono">Telefono:</string>
    <string name="contacto_celular">Celular:</string>
    <string name="contacto_email">Email:</string>
    <string name="contacto_save">Cambios Guardos.</string>
    <string name="contacto_error">Debe rellenar todos los campos</string>
    <string name="contacto_nuevo">Nuevo</string>
    <string name="accion_tipoaccion">Tipo Accion:</string>
    <string name="accion_ejecutivo">Ejecutivo:</string>
    <string name="accion_fecha">Fecha:</string>
    <string name="accion_hora">Hora:</string>
    <string name="accion_titulo">Titulo:</string>
    <string name="accion_resumen">Resumen:</string>
    <string name="c_propuesta_th_usuario">Usuario</string>
    <string name="c_propuesta_th_fecha_inicio">Fecha Inicio</string>
    <string name="c_propuesta_th_fecha_fin">Fecha Fin</string>
    <string name="c_propuesta_th_catorcena">Catorcena</string>
    <string name="c_propuesta_th_unidad">Unidad Negocio</string>
    <string name="c_propuesta_th_status">Estatus</string>
    <string name="c_propuesta_no_resultados">No se encontraron propuestas</string>
    <string name="tab_listado">Listado de Medios</string>
    <string name="tab_ubicaciones">Ubicaciones</string>
    <string name="lbl_medios_datosG_codigo">Código:</string>
    <string name="lbl_medios_datosG_nombreComercial">Nombre Comercial:</string>
    <string name="lbl_medios_datosG_referencia">Referencia:</string>
    <string name="lbl_medios_datosG_observaciones">Observaciones:</string>
    <string name="lbl_medios_datosG_plaza">Plaza:</string>
    <string name="lbl_medios_datosG_tipoMedio">Tipo de Medio:</string>
    <string name="lbl_medios_datosG_ubicacion">Ubicación:</string>
    <string name="lbl_medios_datosG_traficoVehicular">Tráfico Vehicular:</string>
    <string name="lbl_medios_datosG_traficoTranseuntes">Tráfico Transeúntes:</string>
    <string name="lbl_medios_datosG_NSE">N.S.E:</string>
    <string name="lbl_medios_datosG_categoria">Categoría:</string>
    <string name="lbl_medios_datosG_fechaInstalacion">Fecha de Instalación:</string>
    <string name="lbl_propuesta_codigo">Codigo Usuario:</string>
    <string name="lbl_propuesta_fechaInicio">Fecha Inicio:</string>
    <string name="lbl_propuesta_fechaFin">Fecha Fin:</string>
    <string name="lbl_propuesta_catorcena">Catorcena:</string>
    <string name="lbl_propuesta_unidaNegocio">Unidad Negocio:</string>
    <string name="lbl_propuesta_status">status:</string>
    <string name="lbl_outdoor_medio">Medio</string>
    <string name="lbl_outdoor_Unidad">Unidad de Negocio</string>
    <string name="lbl_outdoor_tipo_negocion">Tipo de Negociación</string>
    <string name="lbl_outdoor_precio">Precio</string>
    <string name="listados_Plaza">Plaza</string>
    <string name="listados_Tipo">Tipo de Medio</string>
    <string name="listados_Ubicacion">Ubicación</string>
    <string name="listados_T_Vehicular">T. Vehicular</string>
    <string name="listados_T_Transeuntes">T. Transeúntes</string>
    <string name="listados_NSE">NSE</string>
    <string name="tab_detail_listado_detalle">Datos Generales</string>
    <string name="tab_detail_listado_ubicacion">Mapa de Ubicación</string>
    <string name="tab_detail_listado_galeria">Galería</string>
    <string name="tab_detail_listado_posiciones">Posiciones</string>
    <string name="facturas_TextView_th_numero_Factura">No. de Factura</string>
    <string name="facturas_TextView_th_RFC">RFC</string>
    <string name="facturas_TextView_th_estado">Estado</string>
    <string name="facturas_TextView_th_fecha">Fecha</string>
    <string name="facturas_TextView_th_codigo">Codigo</string>
    <string name="facturas_TextView_th_diasCredito">Días crédito</string>
    <string name="facturas_TextView_th_tipoDoc">Tipo documento</string>
    <string name="facturas_TextView_th_unidadNegocio">Unidad negocio</string>
    <string name="facturas_TextView_th_estatus">estatus</string>
    <string name="facturas_TextView_fecha">Fecha:</string>
    <string name="facturas_TextView_codigo">Codigo:</string>
    <string name="facturas_TextView_diasCredito">Días crédito:</string>
    <string name="facturas_TextView_tipoDoc">Tipo documento:</string>
    <string name="facturas_TextView_unidadNegocio">Unidad negocio:</string>
    <string name="facturas_TextView_estatus">estatus:</string>
    <string name="facturas_TextView_codigoUsuario">Código de Usuario:</string>
    <string name="facturas_TextView_impuesto">Impuesto:</string>
    <string name="facturas_TextView_neto">Neto:</string>
    <string name="facturas_TextView_impuestos">Impuestos:</string>
    <string name="facturas_TextView_total">Total:</string>
    <string name="search_not_found_records">No se ha encontrado información que coincida con los criterios de búsqueda indicados</string>
    <string name="briefs_th_fecha">Fecha</string>
    <string name="briefs_th_cliente">Cliente</string>
    <string name="briefs_th_ejecutivo">Ejecutivo</string>
    <string name="briefs_nuevo">Nuevo Registro</string>
    <string name="briefs_cliente">Cliente</string>
    <string name="briefs_ejecutivo">Ejecutivo</string>
    <string name="briefs_fecha_inicio">Fecha de Inicio</string>
    <string name="briefs_temporalidad">Temporalidad</string>
    <string name="briefs_objetivos">Objetivos</string>
    <string name="briefs_paises">Países</string>
    <string name="briefs_plazas">Plazas</string>
    <string name="briefs_tipos">Tipos</string>
    <string name="briefs_subtipos">Subtipos</string>
    <string name="briefs_fecha_solicitud">Fecha de Solicitud</string>
    <string name="briefs_fecha_entrega">Fecha de Entrega</string>
    <string name="custom_telefono">Telefono: </string>
    <string name="custom_Categoria">Categoria: </string>
    <string name="circuito_th_presupuesto">Presupuesto:</string>
    <string name="circuito_th_tipologia_campania">Tipología de campaña:</string>
    <string name="circuito_th_plazas">Plazas:</string>
    <string name="circuito_th_paises">Países:</string>
    <string name="circuito_th_fecha_inicio">Fecha de inicio:</string>
    <string name="circuito_th_fecha_fin">Fecha de fin:</string>
    <string name="circuito_th_catorcena_spinner">Catorcena:</string>
    <string name="circuito_th_catorcenas">Nº de catorcenas:</string>
    <string name="circuito_th_flexibilidad">Flexibilidad fechas:</string>
    <string name="circuito_th_tipologias">Tipologías:</string>
    <string name="circuito_th_tipologias_deseados">Tip. de lugares deseados:</string>
    <string name="circuito_th_tipologias_restrictivos">Tip.de lugares restrictivos:</string>
    <string name="circuito_th_tipo_subtipo_medio">Tipos y subtipos de medios:</string>
    <string name="circuito_progress_request">Procesando solicitud...</string>
    <string name="tab_agrupaciones">Agrupaciones</string>
    <string name="tab_medios">Medios</string>
    <string name="tab_circuito_mapa">Mapa</string>
    <string name="circuito_th_fechas">Fechas</string>
    <string name="tab_resumen">Resumen</string>
    <string name="circuito_footer_total">Total:</string>
    <string name="circuito_rentabilidad">Rentabilidad:</string>
    <string name="guardar">Guardar</string>
    <string name="reservar">Reservar</string>
    <string name="circuito_cliente">Cliente:</string>
</resources>