<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/main_linear_layout"
              xmlns:android="http://schemas.android.com/apk/res/android">

    <gpovallas.com.Header android:id="@+id/header" style="@style/header"/>

    <LinearLayout
        style="@style/basic_layout_padding">

        <LinearLayout style="@style/container_filter">

            <ImageView android:id="@+id/img_search_icon"
                       style="@style/wrap_style"
                       android:layout_width="0dp"
                       android:layout_weight="0.05"
                       android:adjustViewBounds="true"
                       android:src="@android:drawable/ic_menu_search"/>

            <EditText android:id="@+id/et_search_filter"
                      style="@style/editText"
                      android:layout_width="0dp"
                      android:layout_weight="0.75"
                      android:hint="Filtrar por..."/>

            <Button android:id="@+id/btn_search_filter"
                    style="@style/wrap_style"
                    android:layout_width="0dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    android:onClick="deleteSearchFilter"
                    android:text="Todos"/>

        </LinearLayout>

        <LinearLayout style="@style/container_filter"
                      android:layout_marginBottom="5dp"
                      android:gravity="right">

            <Button android:id="@+id/btn_add_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/btn_add"
                    android:text="@string/briefs_nuevo"
                    android:textColor="@color/borderGray"/>

        </LinearLayout>

        <LinearLayout
            style="@style/listViewRow">

            <TextView
                style="@style/listview_textview_th"
                android:layout_weight="0.25"
                android:text="@string/briefs_th_fecha"/>

            <TextView
                style="@style/listview_textview_th"
                android:layout_weight="0.37"
                android:text="@string/briefs_th_cliente"/>

            <TextView
                style="@style/listview_textview_th"
                android:layout_weight="0.37"
                android:text="@string/briefs_th_ejecutivo"/>

        </LinearLayout>

        <LinearLayout
            style="@style/basic_style">

            <ListView android:id="@android:id/list"
                      style="@style/basic_style"
                      android:cacheColorHint="#ECECEC"
                      android:textFilterEnabled="true">
            </ListView>

            <TextView android:id="@android:id/empty"
                      style="@style/basic_style"
                      android:gravity="center"
                      android:text="No se han encontrado Clientes que coincidan con los criterios indicados"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>